<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CricketerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_cricketer"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/sachinRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_sachin_tendulkar"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/viratKohliRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_virat_kolli"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/adamGilchristRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_adam_gilchrist"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/jacquesKallisRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_jacques_kallis"
            android:textSize="18sp" />


    </RadioGroup>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.169" />
</androidx.constraintlayout.widget.ConstraintLayout>